# neuro-acustic-engine

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: index.html
docs/samples/: catalog.json
examples/: generate_all_sounds.py  generate_focus_playlist.py  generate_relaxation_playlist.py  generate_showcase.py  live_demo.py
src/neuroacoustic/: __init__.py  __main__.py
src/neuroacoustic/core/: config.py  state_manager.py
src/neuroacoustic/ingestion/: calendar_parser.py  llm_agent.py  rss_parser.py
src/neuroacoustic/orchestration/: __init__.py  crossfader.py  execution_loop.py
src/neuroacoustic/synthesis/: binaural.py  dsp_engine.py  isochronic.py  noise_generators.py  streaming.py
src/neuroacoustic/translation/: semantic_mapper.py  timbre_space.py
tests/: test_e2e.py  test_ingestion.py  test_orchestration.py  test_synthesis.py  test_translation.py
tests/fixtures/: sample_calendar.ics
