[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroacoustic-engine"
version = "0.1.0"
description = "Real-time generative cognitive audio engine based on psychoacoustic principles"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pyo>=1.0.5",
    "icalendar>=5.0.0",
    "feedparser>=6.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
